manifests/deployment.yaml
apiVersion: apps/v1
kind:       Deployment
metadata:
  name: $APP
  labels:
    app: $APP
spec:
  selector:
    matchLabels:
      app: $APP
  replicas:        1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge:       1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: $APP
    spec:
      #      nodeSelector:
      #        role: services
      containers:
        - image: $IMAGE
          name:  $APP
          ports:
            - containerPort: $PORT
              name:          http
          readinessProbe:
            httpGet:
              path: /monitoring/is_alive
              port: $PORT
            initialDelaySeconds: 5
            timeoutSeconds:      1
          livenessProbe:
            httpGet:
              path: /monitoring/is_alive
              port: $PORT
            initialDelaySeconds: 5
            timeoutSeconds:      5
          resources:
            requests:
              cpu:    "15m"
              memory: 15Mi
