manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind:       Ingress
metadata:
  name: $APP
  annotations:
    kubernetes.io/ingress.class:    nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - api.k8specs.com
      secretName: tls-secret
  rules:
    - host: api.k8specs.com
      http:
        paths:
          - backend:
              serviceName: $APP
              servicePort: $PORT
            path: /
